--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -15,6 +15,7 @@
       <div class='controls'>
         <%= f.text_field :title %>
       </div>
+    </div>
   </fieldset>
   
   <fieldset>
@@ -23,6 +24,7 @@
       <div class='controls'>
         <%= f.text_field :authors %>
       </div>
+    </div>
   </fieldset>
   
   <fieldset>
@@ -31,6 +33,7 @@
       <div class='controls'>
         <%= f.text_field :isbn %>
       </div>
+    </div>
   </fieldset>
 
   <fieldset>
@@ -39,6 +42,7 @@
       <div class='controls'>
         <%= f.text_field :description %>
       </div>
+    </div>
   </fieldset>
 
   <fieldset>
