--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,19 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container">
-          <%= link_to root_path, class: 'brand' do %>
-            <%= image_tag "books.png", width: '20px' %>  
-            Library
+            <%= link_to root_path, class: 'brand' do %>
+              <%= image_tag "books.png", width: '20px' %>  
+              Library
+            <% end %>
+          
+          <span class="brand" style="float: right; margin-right:20px;">
+          <% if current_user %>
+            Logged in as <%= current_user.email %>, <%= link_to "Log out", log_out_path %>
+          <% else %>          
+            <%= link_to "Login", log_in_path %> or 
+            <%= link_to "Register", sign_up_path %>         
           <% end %>
+          </span>
         </div>
       </div>
     </div>
