--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user do |f| %>
+<%= form_for @user, html: { class: 'form-horizontal' } do |f| %>
   
   <% unless @user.errors.empty? %>
     <div class='alert alert-block alert-error'>
