--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -9,7 +9,7 @@
 
   <div>
     Email:<br/>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, :value => current_user.email %>
   </div>
 
   <%= f.submit "Save" %>
