--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,18 +17,17 @@
 </p>
 
 
-<% if !@book_reservation.nil? && @book_reservation.email == current_user.email || current_user.is_admin?%>
+
+
+<% if @book_reservation.nil? || current_user && @book_reservation.email == current_user.email %>
   <span id="reservation-links">
     <%= render partial: "reservation_links", locals: {book: @book, reservation: @book_reservation} %>
   </span>
 <% end %>
 
-<% if !current_user.nil? && current_user.is_admin? %>
-
-<%= link_to "Edit", edit_book_path(@book), class: 'btn' %>
-
-<%= link_to "Delete", book_path, method: :delete, class: 'btn btn-danger' %>
-
+<% if current_user && current_user.is_admin? %>
+  <%= link_to "Edit", edit_book_path(@book), class: 'btn' %>
+  <%= link_to "Delete", book_path, method: :delete, class: 'btn btn-danger' %>
 <% end %>
 
 <p>
