--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,9 +8,11 @@
   </div>
 <% end %>
 
+<% if current_user && current_user.is_admin? %>
 <p>
   <%= link_to "Add a book", new_book_path, class: 'btn' %>
 </p>
+<% end %>
 
 <% if @books.size > 0 %>
   <dl>
