fixed free/reserved label

--- a/app/views/books/_reservation_status.html.erb
+++ b/app/views/books/_reservation_status.html.erb
@@ -1,5 +1,5 @@
 <% if reservation %>
-  <span class="label important">Reserved by <%= reservation.email %></span>
+  <span class="label label-important">Reserved by <%= reservation.email %></span>
 <% else %>
-  <span class="label success">Free</span>
+  <span class="label label-success">Free</span>
 <% end %>
