--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,16 +13,21 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container">
-            <%= link_to root_path, class: 'brand' do %>
-              <%= image_tag "books.png", width: '20px' %>  
-              Library
-            <% end %>
+          <%= link_to root_path, class: 'brand' do %>
+            <%= image_tag "books.png", width: '20px' %>  
+            Library
+          <% end %>
 
-            <% if current_user && current_user.is_admin? %>
+          <% if current_user %>
+            <%= link_to user_path, class: 'brand' do %>
+              Profile
+            <% end %>
+            <% if current_user.is_admin? %>
               <%= link_to users_path, class: 'brand' do %>
                 Users
-              <% end %>            
+              <% end %>
             <% end %>
+          <% end %>
           
           <span class="brand" style="float: right; margin-right:20px;">
           <% if current_user %>
