--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,6 +10,10 @@
           <% else %>
             <a href="#" class="btn">Make admin</a>
           <% end %>
+          
+          <%= link_to "admin", toggle_permissions_path(user), class: 'btn' %>
+          
+          
           <%= link_to "Delete", user_path(user), method: :delete, class: 'btn btn-danger' %>
         </span>
       </dd>    
