--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,12 +6,11 @@
       <dd>
         <span class="btn-group">
           <% if user.is_admin? %>
-            <a href="#" class="btn">Remove from admins</a>
+            <%= link_to "Remove from admins", toggle_permissions_path(user), class: 'btn' %>
           <% else %>
-            <a href="#" class="btn">Make admin</a>
+            <%= link_to "Make admin", toggle_permissions_path(user), class: 'btn' %>
           <% end %>
           
-          <%= link_to "admin", toggle_permissions_path(user), class: 'btn' %>
           
           
           <%= link_to "Delete", user_path(user), method: :delete, class: 'btn btn-danger' %>
