--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,8 @@
       <div class="navbar-inner">
         <div class="container">
           <%= link_to root_path, class: 'brand' do %>
-            <%= image_tag "books.png", width: '20px' %>  
-            Library
+            <%= image_tag "books.png", width: '20px' %>Library
           <% end %>
-
           <span class="brand" style="float: right; margin-right:20px;">
           <% if current_user %>
             Welcome <%= current_user.email %>, <%= link_to "Log out", log_out_path %>
@@ -53,9 +51,11 @@
             </li>
   
             <% if current_user.is_admin? %>
-              <%= link_to users_path, class: 'brand' do %>
-                <i class="icon-user"></i> Manage users
-              <% end %>
+              <li>
+                <%= link_to users_path, class: 'brand' do %>
+                  <i class="icon-user"></i> Manage users
+                <% end %>
+              </li>
             <% end %>
             
           <% else %>
