--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
           
           <% if current_user && current_user.is_admin? %>
             <li>
-              <%= link_to new_book_path, do %>
+              <%= link_to new_book_path, class: 'brand' do %>
                 <i class="icon-pencil"></i>Add a book
               <% end %>
             </li>
