--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           <% if current_user %>
             <li class="nav-header">Manage</li>
             <li>
-              <%= link_to user_path(current_user), do %>
+              <%= link_to user_path(current_user), class: 'brand' do %>
                 <i class="icon-cog"></i> Change pwd
               <% end %>
             </li>
