--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
             <li class="nav-header">Manage</li>
             <li>
               <%= link_to user_path(current_user), class: 'brand' do %>
-                <i class="icon-cog"></i> Change pwd
+                <i class="icon-cog"></i> Change password
               <% end %>
             </li>
   
